# WarpDrives

./: .gitignore  LICENSE  Makefile  README.md  generate_hero_animation.py  generate_visuals.py  original_prompt.md  pyproject.toml
.github/workflows/: ci.yml
docs/: metrics.md  numerics.md  references.bib  theory.md  visualizations.md
interactive/: index.html
notebooks/: 00_quickstart.ipynb  01_alcubierre.ipynb  02_natario.ipynb  03_vdbroek.ipynb  04_white_toroidal.ipynb  05_bobrick_martire.ipynb  06_lentz.ipynb
scenarios/: alcubierre_demo.yaml  bobrick_martire_demo.yaml  lentz_demo.yaml  natario_demo.yaml
tests/: test_alcubierre_energy_density_sign.py  test_christoffel_symmetry.py  test_energy_conditions.py  test_geodesic_normalization.py  test_minkowski_limit.py
warpbubblesim/: __init__.py  config.py
warpbubblesim/cli/: __init__.py  main.py
warpbubblesim/gr/: __init__.py  adm.py  conditions.py  energy.py  geodesics.py  invariants.py  observers.py  raybundle.py  signature.py  tensors.py
warpbubblesim/metrics/: __init__.py  alcubierre.py  base.py  bobrick_martire.py  lentz.py  natario.py  vdbroek.py  white_toroidal.py
warpbubblesim/utils/: __init__.py  grids.py  io.py  units.py
warpbubblesim/viz/: __init__.py  animations.py  fields2d.py  fields3d.py  spacetime_diagrams.py
